# OrbVi-SLAM

./: .gitmodules  CMakeLists.txt  pyproject.toml  vcpkg.json
examples/: example.py  example_imu.py
orbvi_slam/: __init__.py  _obvi_slam.cp312-win_amd64.pyd  _orb_slam3.cp312-win_amd64.pyd
src/: obvi_slam.cpp  orb_slam3.cpp  timer.cpp
src/obvi_slam/: bindings.cpp  bridge_runner.cpp  bridge_runner.hpp  bridge_types.hpp  third_party_adapter.cpp
src/orb_slam3/: pybind.cpp  pybind.hpp
